--- a/SoftwareConfeccao/MainPage.xaml
+++ b/SoftwareConfeccao/MainPage.xaml
@@ -8,19 +8,13 @@
 
         <Grid>
                 <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="210"/>
                         <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <ScrollView Orientation="Vertical"
-                            BackgroundColor="#EAEAEA"
-                            Padding="10">
+                            BackgroundColor="#a0afb7">
                         <StackLayout>
-                                <Image Source="styleroxo.png"
-                                       HeightRequest="200"/>
-                                <BoxView HeightRequest="1"
-                                         BackgroundColor="Purple"
-                                         Margin="0,10,0,10"/>
 
                                 <Button Text="Clientes"
                                         Clicked="OnClienteClicked"
@@ -30,7 +24,8 @@
                                         BackgroundColor="Transparent"
                                         TextColor="Black"
                                         FontAttributes="Bold"
-                                        HeightRequest="60"/>
+                                        HeightRequest="60"
+                                        WidthRequest="210"/>
 
                                 <Button Text="Fornecedor"
                                         ImageSource="entregador.png"
@@ -40,7 +35,8 @@
                                         BackgroundColor="Transparent"
                                         TextColor="Black"
                                         FontAttributes="Bold"
-                                        HeightRequest="60"/>
+                                        HeightRequest="60"
+                                        WidthRequest="210"/>
 
                                 <Button Text="Transportadora"
                                         ImageSource="transportadora.png"
@@ -50,7 +46,8 @@
                                         BackgroundColor="Transparent"
                                         TextColor="Black"
                                         FontAttributes="Bold"
-                                        HeightRequest="60"/>
+                                        HeightRequest="60"
+                                        WidthRequest="210"/>
 
                                 <Button Text="Matéria Prima"
                                         ImageSource="linha.png"
@@ -60,7 +57,8 @@
                                         BackgroundColor="Transparent"
                                         TextColor="Black"
                                         FontAttributes="Bold"
-                                        HeightRequest="60"/>
+                                        HeightRequest="60"
+                                        WidthRequest="210"/>
 
                                 <Button Text="Estoque"
                                         ImageSource="camiseta.png"
@@ -70,7 +68,8 @@
                                         BackgroundColor="Transparent"
                                         TextColor="Black"
                                         FontAttributes="Bold"
-                                        HeightRequest="60"/>
+                                        HeightRequest="60"
+                                        WidthRequest="210"/>
 
                                 <Button Text="Pedidos"
                                         ImageSource="pedido.png"
@@ -80,25 +79,17 @@
                                         BackgroundColor="Transparent"
                                         TextColor="Black"
                                         FontAttributes="Bold"
-                                        HeightRequest="60"/>
+                                        HeightRequest="60"
+                                        WidthRequest="210"/>
 
-                                <Button Text="Estoque"
-                                        ImageSource="estoque.png"
-                                        Clicked="OnEstoqueClicked"
-                                        HorizontalOptions="Start"
-                                        VerticalOptions="Center"
-                                        BackgroundColor="Transparent"
-                                        TextColor="Black"
-                                        FontAttributes="Bold"
-                                        HeightRequest="60"/>
+                                
+
 
                         </StackLayout>
                 </ScrollView>
 
 
-                <Image Grid.Column="1"
-                       Source="background.png"
-                       Aspect="AspectFill"/>
+
         </Grid>
         </ContentPage.Content>
 </ContentPage>
