--- a/SoftwareConfeccao/Telas/ProdutoTela.xaml
+++ b/SoftwareConfeccao/Telas/ProdutoTela.xaml
@@ -12,7 +12,7 @@
                         Padding="10"
                         Margin="0,10">
                     <StackLayout>
-                        <Label Text="Cadastro de Matéria Prima"
+                        <Label Text="Cadastro de Produto"
                                 FontAttributes="Bold"
                                 HorizontalOptions="Center"/>
                         <Entry Placeholder="Coloque um dado..."/>
