--- a/SoftwareConfeccao/Telas/FornecedoresTela.xaml
+++ b/SoftwareConfeccao/Telas/FornecedoresTela.xaml
@@ -5,20 +5,23 @@
              Title="Lista Fornecedores">
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout BackgroundColor="#00008b"
+            <StackLayout BackgroundColor="#808080"
                     Padding="10">
                 <Frame CornerRadius="10"
-                        BackgroundColor="#6699cc"
+                        BackgroundColor="#919191"
                         Padding="10"
                         Margin="0,10">
                     <StackLayout>
                         <Label Text="Cadastro de Fornecedores"
                                 FontAttributes="Bold"
-                                HorizontalOptions="Center"/>
-                        <Entry Placeholder="Coloque um dado..."/>
+                                HorizontalOptions="Center"
+                                TextColor="#FFFFFF"/>
+                        <Entry Placeholder="Coloque um dado..."
+                               TextColor="Black"/>
                         <Button Text="➤"
                                 HorizontalOptions="End"
-                                BackgroundColor="#4169e1"/>
+                                BackgroundColor="#a1a1a1"
+                                TextColor="#FFFFFF"/>
                     </StackLayout>
                 </Frame>
 
@@ -31,16 +34,19 @@
                         <DataTemplate>
                             <ViewCell>
                                 <VerticalStackLayout Padding="20"
-                                                     BackgroundColor="#4169e1">
+                                                     BackgroundColor="#b2b2b2">
                                     <HorizontalStackLayout>
                                         <Label Text="{Binding Nome}"
-                                               FontSize="20"/>
+                                               FontSize="20"
+                                               TextColor="#FFFFFF"/>
                                         <Label Text="{Binding Email}"
                                                FontSize="20"
-                                               Margin="10,0,0,0"/>
+                                               Margin="10,0,0,0"
+                                               TextColor="#FFFFFF"/>
                                     </HorizontalStackLayout>
                                     <Label Text="{Binding Telefone}"
-                                           FontSize="20"/>
+                                           FontSize="20"
+                                           TextColor="#FFFFFF"/>
                                 </VerticalStackLayout>
                             </ViewCell>
                         </DataTemplate>
@@ -54,12 +60,14 @@
                     <Button Text="◀"
                             HorizontalOptions="StartAndExpand"
                             VerticalOptions="End"
-                            BackgroundColor="#4169e1"
+                            BackgroundColor="#a1a1a1"
+                            TextColor="#FFFFFF"
                             Clicked="OnVoltarFornecedorClicked"/>
                     <Button Text="➕"
                             HorizontalOptions="EndAndExpand"
                             VerticalOptions="End"
-                            BackgroundColor="#4169e1"
+                            BackgroundColor="#a1a1a1"
+                            TextColor="#FFFFFF"
                             Clicked="OnNovoFornecedorClicked"/>
                 </StackLayout>
 
