--- a/SoftwareConfeccao/Telas/PedidoCadastro.xaml
+++ b/SoftwareConfeccao/Telas/PedidoCadastro.xaml
@@ -5,81 +5,82 @@
              Title="Cadastro de Pedido">
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout BackgroundColor="#00008b"
-                    Padding="10">
+            <StackLayout BackgroundColor="#808080"
+                         Padding="10">
                 <Frame CornerRadius="10"
-                        BackgroundColor="#6699cc"
-                        Padding="10"
-                        Margin="0,10"
-                        VerticalOptions="FillAndExpand">
+                       BackgroundColor="#919191"
+                       Padding="10"
+                       Margin="0,10"
+                       VerticalOptions="FillAndExpand">
                     <StackLayout>
                         <Label Text="Cadastro de Pedidos"
-                                FontAttributes="Bold"
-                                HorizontalOptions="Center"/>
+                               FontAttributes="Bold"
+                               HorizontalOptions="Center"
+                               TextColor="White"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="ID:"
-                        TextColor="#cfe7ff"/>
-                <Label x:Name="IdLabelPedido"></Label>
+                       TextColor="White"/>
+                <Label x:Name="IdLabelPedido" TextColor="White"></Label>
 
                 <Label Text="Nome do Item:"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#c2c2c2"
+                       Padding="5">
                     <Entry Placeholder="Insira um Item..."
-                            x:Name="EntryNomePedido"/>
+                           x:Name="EntryNomePedido"/>
                 </Frame>
 
                 <Label Text="Custo:"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#c2c2c2"
+                       Padding="5">
                     <Entry Placeholder="Insira um Custo..."
-                            x:Name="EntryCustoPedido"/>
+                           x:Name="EntryCustoPedido"/>
                 </Frame>
 
                 <Label Text="Quantidade"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#c2c2c2"
+                       Padding="5">
                     <Entry Placeholder="Insira uma quantidade..."
-                            x:Name="EntryQuantidadePedido"/>
+                           x:Name="EntryQuantidadePedido"/>
                 </Frame>
 
                 <Label Text="Frete"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#c2c2c2"
+                       Padding="5">
                     <Entry Placeholder="Insira um Frete..."
-                            x:Name="EntryFretePedido"/>
+                           x:Name="EntryFretePedido"/>
                 </Frame>
 
                 <Label Text="Prazo:"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#c2c2c2"
+                       Padding="5">
                     <Entry Placeholder="Insira um Prazo"
-                            x:Name="EntryPrazoPedido"/>
+                           x:Name="EntryPrazoPedido"/>
                 </Frame>
 
                 <Label Text="Observação"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#c2c2c2"
+                       Padding="5">
                     <Entry Placeholder="Adicione uma Observação (opcional)"
-                            x:Name="EntryObsPedido"/>
+                           x:Name="EntryObsPedido"/>
                 </Frame>
 
                 <Button Text="Salvar"
-                        BackgroundColor="#6699cc"
+                        BackgroundColor="#919191"
                         Margin="0,20,0,0"
-                        TextColor="Black"
+                        TextColor="White"
                         Clicked="OnSalvarDadosPedidoClicked"/>
 
                 <Button Text="Excluir"
@@ -87,12 +88,12 @@
                         BackgroundColor="Transparent"
                         Clicked="OnApagarPedidoClicked"/>
 
-
                 <Button Text="◀"
                         HorizontalOptions="Start"
                         VerticalOptions="EndAndExpand"
                         Margin="0,10,0,0"
-                        BackgroundColor="#6699cc"
+                        BackgroundColor="#919191"
+                        TextColor="White"
                         Clicked="OnVoltarCadastroPedidoClicked"/>
 
             </StackLayout>
