--- a/SoftwareConfeccao/Telas/ProdutoCadastro.xaml
+++ b/SoftwareConfeccao/Telas/ProdutoCadastro.xaml
@@ -5,54 +5,56 @@
              Title="Cadastro de Produto">
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout BackgroundColor="#00008b"
-                    Padding="10">
+            <StackLayout BackgroundColor="#808080"
+                         Padding="10">
                 <Frame CornerRadius="10"
-                        BackgroundColor="#6699cc"
-                        Padding="10"
-                        Margin="0,10"
-                        VerticalOptions="FillAndExpand">
+                       BackgroundColor="#c2c2c2"
+                       Padding="10"
+                       Margin="0,10"
+                       VerticalOptions="FillAndExpand">
                     <StackLayout>
                         <Label Text="Cadastro de Produto"
-                                FontAttributes="Bold"
-                                HorizontalOptions="Center"/>
+                               FontAttributes="Bold"
+                               HorizontalOptions="Center"
+                               TextColor="White"/>
                     </StackLayout>
                 </Frame>
                 <Label Text="ID:"
-                        TextColor="#cfe7ff"/>
-                <Label x:Name="IdLabelProduto"></Label>
+                       TextColor="White"/>
+                <Label x:Name="IdLabelProduto" TextColor="White"></Label>
 
                 <Label Text="Nome do Item:"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#919191"
+                       Padding="5">
                     <Entry Placeholder="Insira um Item..."
-                            x:Name="EntryNomeProduto"/>
+                           x:Name="EntryNomeProduto"
+                           TextColor="Black"/>
                 </Frame>
 
                 <Label Text="Custo:"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
+                       BackgroundColor="#919191"
+                       Padding="5">
                     <Entry Placeholder="Insira um Custo..."
-                            x:Name="EntryCustoProduto"/>
+                           x:Name="EntryCustoProduto"
+                           TextColor="Black"/>
                 </Frame>
 
                 <Label Text="Tempo de Produção"
-                        TextColor="#cfe7ff"/>
+                       TextColor="White"/>
                 <Frame CornerRadius="5"
-                        BackgroundColor="#cfe7ff"
-                        Padding="5">
-                    <Entry Placeholder="Insira uma quantidade..."
-                            x:Name="EntryTempopProducaoProduto"/>
+                       BackgroundColor="#919191"
+                       Padding="5">
+                    <Entry Placeholder="Insira o tempo de produção..."
+                           x:Name="EntryTempopProducaoProduto"
+                           TextColor="Black"/>
                 </Frame>
 
-
-
                 <Button Text="Salvar"
-                        BackgroundColor="#6699cc"
+                        BackgroundColor="#c2c2c2"
                         Margin="0,20,0,0"
                         TextColor="Black"
                         Clicked="OnSalvarDadosProdutoClicked"/>
@@ -66,9 +68,8 @@
                         HorizontalOptions="Start"
                         VerticalOptions="EndAndExpand"
                         Margin="0,10,0,0"
-                        BackgroundColor="#6699cc"
+                        BackgroundColor="#c2c2c2"
                         Clicked="OnVoltarCadastroProdutoClicked"/>
-
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
