--- a/SoftwareConfeccao/Telas/TransportadoraTela.xaml
+++ b/SoftwareConfeccao/Telas/TransportadoraTela.xaml
@@ -2,24 +2,27 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Telas.TransportadoraTela"
-             Title="Lista de Transportadora"
+             Title="Lista de Transportadoras"
              Shell.NavBarIsVisible="false">
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout BackgroundColor="#00008b"
+            <StackLayout BackgroundColor="#808080"
                          Padding="10">
                 <Frame CornerRadius="10"
-                       BackgroundColor="#6699cc"
+                       BackgroundColor="#919191"
                        Padding="10"
                        Margin="0,10">
                     <StackLayout>
-                        <Label Text="Cadastro de Transportadora"
+                        <Label Text="Lista de Transportadoras"
                                FontAttributes="Bold"
-                               HorizontalOptions="Center"/>
-                        <Entry Placeholder="Coloque um dado..."/>
+                               HorizontalOptions="Center"
+                               TextColor="#FFFFFF"/>
+                        <Entry Placeholder="Coloque um dado..."
+                               TextColor="Black"/>
                         <Button Text="➤"
                                 HorizontalOptions="End"
-                                BackgroundColor="#4169e1"/>
+                                BackgroundColor="#a1a1a1"
+                                TextColor="#FFFFFF"/>
                     </StackLayout>
                 </Frame>
 
@@ -32,16 +35,19 @@
                         <DataTemplate>
                             <ViewCell>
                                 <VerticalStackLayout Padding="20"
-                                                     BackgroundColor="#4169e1">
+                                                     BackgroundColor="#b2b2b2">
                                     <HorizontalStackLayout>
                                         <Label Text="{Binding Nome}"
-                                               FontSize="20"/>
+                                               FontSize="20"
+                                               TextColor="#FFFFFF"/>
                                         <Label Text="{Binding Email}"
                                                FontSize="20"
-                                               Margin="10,0,0,0"/>
+                                               Margin="10,0,0,0"
+                                               TextColor="#FFFFFF"/>
                                     </HorizontalStackLayout>
                                     <Label Text="{Binding Telefone}"
-                                           FontSize="20"/>
+                                           FontSize="20"
+                                           TextColor="#FFFFFF"/>
                                 </VerticalStackLayout>
                             </ViewCell>
                         </DataTemplate>
@@ -55,17 +61,18 @@
                     <Button Text="◀"
                             HorizontalOptions="StartAndExpand"
                             VerticalOptions="End"
-                            BackgroundColor="#4169e1"
+                            BackgroundColor="#a1a1a1"
+                            TextColor="#FFFFFF"
                             Clicked="OnVoltarTransportadoraClicked"/>
                     <Button Text="➕"
                             HorizontalOptions="EndAndExpand"
                             VerticalOptions="End"
-                            BackgroundColor="#4169e1"
+                            BackgroundColor="#a1a1a1"
+                            TextColor="#FFFFFF"
                             Clicked="OnNovaTransportadoraClicked"/>
                 </StackLayout>
 
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
-
 </ContentPage>
